<resources>
    <string name="app_name">F2QR</string>
    <string name="app_discribe">Face To QRCode</string>

    <string name="title_scan">Scan</string>
    <string name="title_register">Register Info</string>
    <string name="title_about">About</string>

    <string name="qrcode_tip">this is a qrcode</string>
    <string name="click_to_scan_your_qrcode">Click to scan your qrcode</string>
    <string name="click_to_capture_your_avatar">Click to capture your avatar</string>
    <string name="title_activity_avatar_caputure">AvatarCaputureActivity</string>
    <string name="start_to_recognize">Start to recognize</string>
    <string name="tv_registration_caption">Registration</string>
    <string name="tv_identify_caption">Identify</string>
</resources>