<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#ffffdd"
    tools:context=".ui.scan.ScanFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:text="@string/app_name"
        android:textColor="@color/f2qr_prim"
        android:textSize="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:text="@string/app_discribe"
        android:textColor="@color/f2qr_prim"
        android:textSize="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintHorizontal_chainStyle="spread_inside" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutAvatar"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutQRCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        tools:layout_editor_absoluteX="106dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_avatar_registration"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cv_avatar_identify"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <ImageView
                android:id="@+id/iv_avatar_registration"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_avatar_100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/info" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_avatar_registration_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_avatar_100dp"
            android:scaleType="centerCrop"
            android:translationZ="2dp"
            app:layout_constraintBottom_toBottomOf="@id/cv_avatar_registration"
            app:layout_constraintEnd_toEndOf="@id/cv_avatar_registration"
            app:layout_constraintStart_toStartOf="@id/cv_avatar_registration"
            app:layout_constraintTop_toTopOf="@id/cv_avatar_registration" />


        <TextView
            android:id="@+id/tv_registration"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_registration_caption"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@id/cv_avatar_registration"
            app:layout_constraintStart_toStartOf="@id/cv_avatar_registration"
            app:layout_constraintTop_toBottomOf="@id/cv_avatar_registration" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_avatar_identify"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cv_avatar_registration"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <ImageView
                android:id="@+id/iv_avatar_identify"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/info" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_avatar_identify_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_avatar_100dp"
            android:scaleType="centerCrop"
            android:translationZ="2dp"
            app:layout_constraintBottom_toBottomOf="@id/cv_avatar_identify"
            app:layout_constraintEnd_toEndOf="@id/cv_avatar_identify"
            app:layout_constraintStart_toStartOf="@id/cv_avatar_identify"
            app:layout_constraintTop_toTopOf="@id/cv_avatar_identify" />

        <TextView
            android:id="@+id/tv_identify"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_identify_caption"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@id/cv_avatar_identify"
            app:layout_constraintStart_toStartOf="@id/cv_avatar_identify"
            app:layout_constraintTop_toBottomOf="@id/cv_avatar_identify" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayoutQRCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_qrcode"
        android:minWidth="240dp"
        android:minHeight="240dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAvatar"
        tools:layout_editor_absoluteX="106dp">

        <ImageView
            android:id="@+id/iv_qrcode"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@color/white"
            android:contentDescription="@string/qrcode_tip" />
    </LinearLayout>

    <TextView
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/start_to_recognize"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
         />
         />
</androidx.constraintlayout.widget.ConstraintLayout>